--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Check Grades for Chrome</h2><br><hr><br>
 <p>1.) Download the <a target="_blank" href="/grades.zip">Chrome Extension</a> and unzip it.</p><br><hr><br>
 <p>2.) Go to "chrome://extensions".</p><br><hr><br>
-<p>3.) Move CheckGrades.crx onto the page to install.</p>
+<p>3.) Move easygrade.crx onto the page to install.</p>
 </div></div>
 </div>
 <div id="unahead" style="width:100%; height:5em; background-color:#4D0080; color:#ffffff; padding:0px; margin: 0 auto;-webkit-box-shadow:none;box-shadow:none;position:fixed;top:0;left:0;">
