--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="unathl" style="display:inline-block;margin-top:1.25em;margin-left:.75em;float:left;"><strong>Check Grades</strong></div>
 </div>
 <div id="unafoot" style="width:100%; height:5em; background-color:#4D0080; color:#fff; padding:0px; margin: 0 auto;-webkit-box-shadow:none;box-shadow:none;position:fixed;bottom:0;left:0;">
-<div class="footcon" style="height:4em; margin-top: .5em;margin-left: auto;margin-right: auto;"><p>&copy; 2016 Russell Steadman. Some rights reserved. | <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">UnaTetra</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="color:#fff;">CC BY-NC-SA 4.0 Int. License</a>.</p></div>
+<div class="footcon" style="height:4em; margin-top: .5em;margin-left: auto;margin-right: auto;">Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="color:#fff;">CC BY-NC-SA 4.0 Int. License</a>.</p></div>
 </div>
 <div id="colorflash" style="display:none;"></div>
 <style>@media screen and (min-width: 480px) {#unafoot{font-size:1em;}.footcon{width:65%;}}@media screen and (max-width: 480px) {#unafoot{font-size:.75em;}.footcon{width:85%;}}</style>
